--- a/feladat.html
+++ b/feladat.html
@@ -37,3 +37,172 @@ USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, <b>updated</b>, 516, <a href="https://www.munzee.com/map/qd69bvq0m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_YoureAStar.json" target="_blank">json</a><br />
+USA_StAugustinePirateShip, not updated, 0.0<br />
+Spain_WineOClock kihagyva (100%), <br />
+Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
+Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
+USA_USMGoldenEagles, not updated, 0.9661835748792278<br />
+USA_Turtle, not updated, 0.8818342151675438<br />
+Finland_BioOtokka, not updated, 0.0<br />
+Canada_GatineauFMGGarden, not updated, 0.8800000000000097<br />
+Lithuania_KaunasBasketball, not updated, 0.29999999999999716<br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
+Switzerland_GiddyUpGo, not updated, 1.0<br />
+Belgium_KnokkeHeist, not updated, 0.5<br />
+Hungary_Evolution, not updated, 0.9722222222222143<br />
+Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
+USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.6999999999999886<br />
+Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
+Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
+Slovakia_FlagOfSlovakia, not updated, 0.2799999999999976<br />
+Hungary_SurpriseAirline, not updated, 0.0<br />
+Hungary_RubiksCube, not updated, 0.0<br />
+Hungary_GyulaCastle, not updated, 0.0<br />
+USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
+USA_FortMyersAlligator, not updated, 0.0<br />
+Denmark_TheSwanInHilleroed, not updated, 0.0<br />
+Hungary_CsepelObol, not updated, 0.0<br />
+Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
+Czechia_KMZNAK, not updated, 0.19999999999998863<br />
+Luxembourg_LuxembourgFlag, not updated, 0.0<br />
+USA_MarioFireballVoid, not updated, 0.0<br />
+USA_SpyGoggles, not updated, 0.0<br />
+Hungary_Farkas-erdo, not updated, 0.16999999999999993<br />
+Hungary_CastleOfDiosgyor, not updated, 0.0<br />
+Denmark_GhostInHilleroed, not updated, 0.0<br />
+USA_CherryBomb kihagyva (100%), <br />
+USA_Stormtrooper kihagyva (100%), <br />
+Australia_BeeFlowers kihagyva (100%), <br />
+Australia_BeeSanta kihagyva (100%), <br />
+Australia_BuzzzBee kihagyva (100%), <br />
+Australia_LaidleyBeeHive kihagyva (100%), <br />
+Canada_JumpingJanuaryJamboree kihagyva (100%), <br />
+Canada_MaillardvilleChristmas kihagyva (100%), <br />
+Finland_KokkolanKurpitsainen kihagyva (100%), <br />
+Hungary_10thBirthdayCake kihagyva (100%), <br />
+Hungary_BlackCat kihagyva (100%), <br />
+Hungary_ChainBridge kihagyva (100%), <br />
+Hungary_CrossbowOnHarmashatarhegy kihagyva (100%), <br />
+Hungary_DuckAtBalaton kihagyva (100%), <br />
+Hungary_FlagsInBudapest, not updated, 0.0<br />
+Hungary_FlowerCarnivalInDebrecen kihagyva (100%), <br />
+Hungary_FrogInBudaors kihagyva (100%), <br />
+Hungary_SantasSledge kihagyva (100%), <br />
+Hungary_SnoopyInBudapest kihagyva (100%), <br />
+Hungary_SteamshipOnDanube kihagyva (100%), <br />
+Hungary_SurpriseCar kihagyva (100%), <br />
+Hungary_SurpriseInBudapest kihagyva (100%), <br />
+Hungary_SwansByTheDanube kihagyva (100%), <br />
+Lithuania_Akmenynas kihagyva (100%), <br />
+Lithuania_OZOParkas kihagyva (100%), <br />
+Netherlands_CrossbowsBeeckestijn kihagyva (100%), <br />
+Netherlands_ErensteinerEasterEggs2 kihagyva (100%), <br />
+Netherlands_EVO2Kerkrade kihagyva (100%), <br />
+Slovakia_Alien kihagyva (100%), <br />
+Sweden_SwedishFlag kihagyva (100%), <br />
+UnitedKingdom_FavershamFatherXmas kihagyva (100%), <br />
+UnitedKingdom_GriffMemorial kihagyva (100%), <br />
+UnitedKingdom_PastebucketMemorial kihagyva (100%), <br />
+UnitedKingdom_RomseyRainbow kihagyva (100%), <br />
+UnitedKingdom_RomseyRainbowUnicorn kihagyva (100%), <br />
+USA_BurlingtonFlamingo kihagyva (100%), <br />
+USA_CandyCaneZee kihagyva (100%), <br />
+USA_ChristmasTree kihagyva (100%), <br />
+USA_GingerbreadMan kihagyva (100%), <br />
+USA_GumballMachine kihagyva (100%), <br />
+USA_HOwlOween kihagyva (100%), <br />
+USA_LakelandCandyCorn kihagyva (100%), <br />
+USA_MamaTsLadybug kihagyva (100%), <br />
+USA_MermaidTail kihagyva (100%), <br />
+USA_OctoberPumpkin kihagyva (100%), <br />
+USA_SantaSirPrize, not updated, 0.0<br />
+USA_Snowman kihagyva (100%), <br />
+USA_SprinkleCupcake kihagyva (100%), <br />
+USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
+USA_WestportSpecials kihagyva (100%), <br />
+Netherlands_TheWall kihagyva (100%), <br />
+Netherlands_PompebledPalet kihagyva (100%), <br />
+Netherlands_GroeneStroom kihagyva (100%), <br />
+Netherlands_Klomp kihagyva (100%), <br />
+Netherlands_EvoAppleEch kihagyva (100%), <br />
+Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
+USA_GreenvilleCloverLeaf kihagyva (100%), <br />
+Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
+Denmark_EmeraldInHilleroed kihagyva (100%), <br />
+Finland_HalkokarinEvovene, not updated, 0.0<br />
+USA_CarettaSeaTurtle kihagyva (100%), <br />
+UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
+Netherlands_LuckyClover kihagyva (100%), <br />
+Poland_Jewel kihagyva (100%), <br />
+Poland_Reksio kihagyva (100%), <br />
+Finland_KokkolanVaakuna kihagyva (100%), <br />
+Germany_PapageiCrumstadt kihagyva (100%), <br />
+USA_XIBirthdayMadHatter kihagyva (100%), <br />
+USA_RobHeartsLou1 kihagyva (100%), <br />
+USA_RobHeartsLou2 kihagyva (100%), <br />
+USA_Corgi kihagyva (100%), <br />
+Poland_ZamekPiastow kihagyva (100%), <br />
+UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
+Canada_HalloweenInOttawa kihagyva (100%), <br />
+Slovakia_HungryBatTerry kihagyva (100%), <br />
+USA_LakevillesSeaTurtle kihagyva (100%), <br />
+USA_LightningBoltInSapphire kihagyva (100%), <br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
+Germany_Bullseye kihagyva (100%), <br />
+Finland_TampereElectric, not updated, 0.08305647840531805<br />
+USA_MontgomeryBaseball kihagyva (100%), <br />
+USA_HanksBoots, not updated, 0.0<br />
+USA_ColorTheZoo, not updated, 0.0<br />
+Netherlands_SupermanVsBatman kihagyva (100%), <br />
+Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
+Slovakia_IcemenInLove kihagyva (100%), <br />
+Slovakia_TrencinCastle, not updated, 0.0<br />
+UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
+Australia_PiratePetesParrot kihagyva (100%), <br />
+UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
+UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
+UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
+USA_PiratesTreasure kihagyva (100%), <br />
+Australia_QueenslandKoala kihagyva (100%), <br />
+USA_GiraffeInGadsden kihagyva (100%), <br />
+USA_AnaheimSapphire kihagyva (100%), <br />
+Finland_HelsinkiColour kihagyva (100%), <br />
+USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
+Germany_SkylarkFeldlerche kihagyva (100%), <br />
+Netherlands_MysteryBikeField kihagyva (100%), <br />
+Australia_Brisbane, not updated, 0.0<br />
+Australia_EgyptianMask kihagyva (100%), <br />
+Germany_BerlinMunzeePin, not updated, 0.8100000000000023<br />
+Germany_DiamantBerlin, not updated, 0.0<br />
+Germany_BerlinBear, not updated, 0.0<br />
+Germany_HonowWappen, not updated, 0.3355704697986539<br />
+Canada_GatineauEvo, not updated, 0.75<br />
+Germany_ColorsBonn kihagyva (100%), <br />
+Germany_BTHVN2020 kihagyva (100%), <br />
+Canada_GatineauScarletTulip kihagyva (100%), <br />
+Canada_RumballMachine kihagyva (100%), <br />
+Canada_OttawaFireworks kihagyva (100%), <br />
+Canada_HospitalLove kihagyva (100%), <br />
+Hungary_Q94 kihagyva (100%), <br />
+Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
+Hungary_RWG kihagyva (100%), <br />
+Hungary_Grail kihagyva (100%), <br />
+Hungary_DVTKInMiskolc, not updated, 0.0<br />
+Hungary_Beagle kihagyva (100%), <br />
+Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
+Hungary_KodalysViolin kihagyva (100%), <br />
+Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
+Hungary_64color kihagyva (100%), <br />
+Hungary_ShieldBudapest, not updated, 0.8199999999999932<br />
+Hungary_ShieldMiskolc, not updated, 0.0<br />
+Hungary_ShieldEger, not updated, 0.0<br />
+Hungary_MunzeeLogo kihagyva (100%), <br />
+Hungary_GreatChurch kihagyva (100%), <br />
+Canada_SpringInOttawa kihagyva (100%), <br />
+Canada_OttawaNewYears kihagyva (100%), <br />
+Canada_SummerInOttawa kihagyva (100%), <br />
+USA_TheAppleValleyApple kihagyva (100%), <br />
+USA_LighteksMinnesotaWild, <b>updated</b>, 430, <a href="https://www.munzee.com/map/9zvwrt9px/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LighteksMinnesotaWild.json" target="_blank">json</a><br />
