--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.15 01:10:08<br />
+<b>start</b> - 2023.02.15 15:23:55<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.4299999999999997<br />
-Hungary_VotiveChurch, not updated, -36.150000000000006<br />
+Hungary_VotiveChurch, not updated, -34.95<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -130,7 +130,7 @@ Netherlands_Klomp kihagyva (100%), <br />
 Netherlands_EvoAppleEch kihagyva (100%), <br />
 Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
 USA_GreenvilleCloverLeaf kihagyva (100%), <br />
-Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
+Denmark_IsvaffelInHilleroed, <b>hiba</b> a táblázat megnyitásakor, RESOURCE_EXHAUSTED, 12<br />
 Denmark_EmeraldInHilleroed kihagyva (100%), <br />
 Finland_HalkokarinEvovene, not updated, 0.0<br />
 USA_CarettaSeaTurtle kihagyva (100%), <br />
@@ -159,50 +159,4 @@ USA_ColorTheZoo, not updated, 0.0<br />
 Netherlands_SupermanVsBatman kihagyva (100%), <br />
 Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
 Slovakia_IcemenInLove kihagyva (100%), <br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
-Australia_PiratePetesParrot kihagyva (100%), <br />
-UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
-UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
-UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
-USA_PiratesTreasure kihagyva (100%), <br />
-Australia_QueenslandKoala kihagyva (100%), <br />
-USA_GiraffeInGadsden kihagyva (100%), <br />
-USA_AnaheimSapphire kihagyva (100%), <br />
-Finland_HelsinkiColour kihagyva (100%), <br />
-USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
-Germany_SkylarkFeldlerche kihagyva (100%), <br />
-Netherlands_MysteryBikeField kihagyva (100%), <br />
-Australia_Brisbane, not updated, 0.0<br />
-Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.8800000000000026<br />
-Germany_DiamantBerlin, not updated, 0.0<br />
-Germany_BerlinBear, not updated, 0.0<br />
-Germany_HonowWappen, not updated, 0.6711409395973149<br />
-Canada_GatineauEvo, <b>updated</b>, 153, <a href="https://www.munzee.com/map/f244tv1bn/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauEvo.json" target="_blank">json</a><br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.8199999999999932<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo kihagyva (100%), <br />
-Hungary_GreatChurch kihagyva (100%), <br />
-Canada_SpringInOttawa kihagyva (100%), <br />
-Canada_OttawaNewYears kihagyva (100%), <br />
-Canada_SummerInOttawa kihagyva (100%), <br />
-USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, <b>updated</b>, 423, <a href="https://www.munzee.com/map/9zvwrt9px/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LighteksMinnesotaWild.json" target="_blank">json</a><br />
+Slovakia_TrencinCastle, <b>updated</b>, 185, <a href="https://www.munzee.com/map/u2sy4ktgb/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_TrencinCastle.json" target="_blank">json</a><br />
