--- a/feladat.html
+++ b/feladat.html
@@ -799,3 +799,58 @@ USA_PrizeWheel kihagyva (100%), <br />
 USA_EvoHedgehog kihagyva (100%), <br />
 USA_SeahorseByTheSeaShore kihagyva (100%), <br />
 USA_LakeForestMixture, <b>updated</b>, 704, <a href="https://www.munzee.com/map/dn4m4d3gj/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakeForestMixture.json" target="_blank">json</a><br />
+USA_GreenvillesAmethystRoad kihagyva (100%), <br />
+USA_SaintMarysHeart kihagyva (100%), <br />
+USA_GreenvilleOhioSpiritTrophy, not updated, 0.0<br />
+USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
+USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
+USA_GreenvilleZodiacWheels kihagyva (100%), <br />
+USA_GreenvilleRUMCircle, not updated, 0.0<br />
+USA_GreenvilleFlatSurprise, not updated, 0.0<br />
+USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
+USA_GreenvilleSouthCarolina, not updated, 0.0<br />
+USA_JaysvilleFlatCircles, not updated, 0.0<br />
+USA_CCTXZeeCret, not updated, 0.0<br />
+USA_DecaturHearts kihagyva (100%), <br />
+USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
+UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
+UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
+USA_ScoobyDooCrossbow, not updated, 0.0<br />
+USA_TexasStateFlag kihagyva (100%), <br />
+USA_Geowoodstock2019 kihagyva (100%), <br />
+USA_MansfieldMuru, not updated, 0.0<br />
+USA_CedarRapidsIAFlag, not updated, 0.0<br />
+Hungary_JewelAndColor kihagyva (100%), <br />
+USA_CRMunzee6thBirthday kihagyva (100%), <br />
+USA_CRAirMysteryTrail kihagyva (100%), <br />
+USA_CRMunzFit20 kihagyva (100%), <br />
+USA_HayesBattlefield kihagyva (100%), <br />
+USA_CREgyptianZodiac kihagyva (100%), <br />
+USA_CherryBombCedarRapids kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
+USA_GCandyCane kihagyva (100%), <br />
+USA_GCandyCaneFlats, not updated, 0.0<br />
+USA_GShamrock kihagyva (100%), <br />
+USA_GShamrockFlats, not updated, 0.0<br />
+----csoportok<br />
+USA_CRJonesParkBirthday7Flats, <b>updated</b>, <a href="https://www.munzee.com/map/9zqydku0v/16.3009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRJonesParkBirthday7Flats.json" target="_blank">json</a><br />
+USA_GreenvilleEvolutionSquare, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u3bp1f/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleEvolutionSquare.json" target="_blank">json</a><br />
+----városok<br />
+Hungary_city_Budapest, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw1keu9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Budapest.json" target="_blank">json</a><br />
+UnitedKingdom_city_Cromer, <b>updated</b>, <a href="https://www.munzee.com/map/u12vje1zv/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_Cromer.json" target="_blank">json</a><br />
+USA_city_AppleValley, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwrj4rs/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_AppleValley.json" target="_blank">json</a><br />
+USA_city_CedarRapids, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb3kzv/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_CedarRapids.json" target="_blank">json</a><br />
+USA_city_FortWorth, <b>updated</b>, <a href="https://www.munzee.com/map/9vf9znt4b/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_FortWorth.json" target="_blank">json</a><br />
+USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
+----felhasználók<br />
+Norbee97_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw30kw9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_all.json" target="_blank">json</a><br />
+Norbee97_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqk7rjj/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_completed.json" target="_blank">json</a><br />
+Rikitan_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vv279/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_all.json" target="_blank">json</a><br />
+Rikitan_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yxmhk/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_empty.json" target="_blank">json</a><br />
+rodrico101_all, <b>updated</b>, <a href="https://www.munzee.com/map/9zqz5kqsw/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_all.json" target="_blank">json</a><br />
+rodrico101_completed, <b>updated</b>, <a href="https://www.munzee.com/map/9zqydku0v/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_completed.json" target="_blank">json</a><br />
+rodrico101_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zqyb98mv/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/rodrico101_empty.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.02.16 01:54:07<br />
+összesen 2638<br />
