--- a/feladat.html
+++ b/feladat.html
@@ -884,3 +884,4 @@ USA_KirkwoodEvolutions5, <b>updated</b>, 141, <a href="https://www.munzee.com/ma
 USA_KirkwoodEvolutions6, <b>updated</b>, 145, <a href="https://www.munzee.com/map/9yzew8k2u/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions6.json" target="_blank">json</a> <b>100%</b><br />
 USA_KirkwoodEvolutions7, <b>updated</b>, 76, <a href="https://www.munzee.com/map/9yzew8n37/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions7.json" target="_blank">json</a><br />
 USA_Woodpecker, <b>updated</b>, 179, <a href="https://www.munzee.com/map/9yzep995f/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Woodpecker.json" target="_blank">json</a><br />
+USA_ZBriefcase, <b>updated</b>, 67, <a href="https://www.munzee.com/map/9yzs8jtyc/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZBriefcase.json" target="_blank">json</a> <b>100%</b><br />
