--- a/feladat.html
+++ b/feladat.html
@@ -886,3 +886,4 @@ USA_KirkwoodEvolutions7, <b>updated</b>, 76, <a href="https://www.munzee.com/map
 USA_Woodpecker, <b>updated</b>, 179, <a href="https://www.munzee.com/map/9yzep995f/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Woodpecker.json" target="_blank">json</a><br />
 USA_ZBriefcase, <b>updated</b>, 67, <a href="https://www.munzee.com/map/9yzs8jtyc/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZBriefcase.json" target="_blank">json</a> <b>100%</b><br />
 USA_WinterCardinalFeather, <b>updated</b>, 48, <a href="https://www.munzee.com/map/9yzsdcxnq/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WinterCardinalFeather.json" target="_blank">json</a> <b>100%</b><br />
+USA_Chickadee, <b>updated</b>, 198, <a href="https://www.munzee.com/map/9yzep8yfh/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Chickadee.json" target="_blank">json</a> <b>100%</b><br />
