--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.18 16:36:42<br />
+<b>start</b> - 2023.02.19 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.4299999999999997<br />
-Hungary_VotiveChurch, not updated, -35.81000000000001<br />
+Hungary_VotiveChurch, not updated, -36.84<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -19,7 +19,7 @@ USA_MunzeeLogo, not updated, 0.7099999999999937<br />
 NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, 0.37453183520599964<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.35273368606702604<br />
-UnitedKingdom_LFCBebington, not updated, 0.7518796992481178<br />
+UnitedKingdom_LFCBebington, not updated, 0.9667024704618719<br />
 Finland_Nurmijarvi, not updated, 0.5<br />
 Finland_Hyvinkaa, not updated, 0.0<br />
 USA_CanonCity, not updated, 0.0<br />
@@ -175,7 +175,7 @@ Germany_SkylarkFeldlerche kihagyva (100%), <br />
 Netherlands_MysteryBikeField kihagyva (100%), <br />
 Australia_Brisbane, not updated, 0.0<br />
 Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.8800000000000026<br />
+Germany_BerlinMunzeePin, not updated, 0.6799999999999997<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.6711409395973149<br />
@@ -205,7 +205,7 @@ Canada_SpringInOttawa kihagyva (100%), <br />
 Canada_OttawaNewYears kihagyva (100%), <br />
 Canada_SummerInOttawa kihagyva (100%), <br />
 USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.0799999999999983<br />
+USA_LighteksMinnesotaWild, not updated, 0.1600000000000037<br />
 USA_ChristmasWreath kihagyva (100%), <br />
 USA_WinterOlympics2018 kihagyva (100%), <br />
 USA_R2D2 kihagyva (100%), <br />
@@ -757,7 +757,7 @@ USA_SpyTrain kihagyva (100%), <br />
 USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
 Canada_Feb2023HeartGarden, not updated, 0.0<br />
-USA_SpyGlass, <b>updated</b>, 132, <a href="https://www.munzee.com/map/dnrmhsuv8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpyGlass.json" target="_blank">json</a><br />
+USA_SpyGlass, not updated, 0.0<br />
 USA_TiedUpInKnotzInRoundRock, not updated, 0.9000000000000057<br />
 USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
 USA_EllisCreekOwl kihagyva (100%), <br />
@@ -835,7 +835,7 @@ USA_GShamrock kihagyva (100%), <br />
 USA_GShamrockFlats, not updated, 0.0<br />
 USA_GPumpkin kihagyva (100%), <br />
 USA_GPumpkinFlats, not updated, 0.0<br />
-USA_Mauhaus, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yzg8sq7e/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Mauhaus.json" target="_blank">json</a><br />
+USA_Mauhaus, not updated, 0.0<br />
 USA_GToyotaCrossbows, not updated, 0.0<br />
 USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
 USA_GToyota kihagyva (100%), <br />
@@ -853,46 +853,40 @@ USA_PotOfGold, not updated, 0.0<br />
 USA_WitchsHat, not updated, 0.0<br />
 USA_OwensboroRiverboat, not updated, 0.0<br />
 USA_OwensboroRiverboatFlats, not updated, 0.0<br />
-Lithuania_SeskinesSkulpturyParkas, <b>updated</b>, 156, <a href="https://www.munzee.com/map/u99zq1jmb/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_SeskinesSkulpturyParkas.json" target="_blank">json</a><br />
+Lithuania_SeskinesSkulpturyParkas, not updated, 0.0<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
 USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees, <b>updated</b>, 282, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a><br />
-USA_MaineWeatherBalloon, <b>updated</b>, 64, <a href="https://www.munzee.com/map/dryg6gxs7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MaineWeatherBalloon.json" target="_blank">json</a><br />
+USA_PotOZees, not updated, 0.0<br />
+USA_MaineWeatherBalloon, not updated, 0.0<br />
 USA_HappyHoliday20, not updated, 0.0<br />
 USA_HazardSpurCampton, not updated, 0.0<br />
 USA_HazardSpurCamptonFlats, not updated, 0.0<br />
 USA_CrossedArrowsOwensboro, not updated, 0.0<br />
 USA_GHarmony kihagyva (100%), <br />
 USA_GHarmonyFlats, not updated, 0.0<br />
-USA_MontgomeryChiliPepper, <b>updated</b>, 131, <a href="https://www.munzee.com/map/djf8jkbv0/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MontgomeryChiliPepper.json" target="_blank">json</a><br />
-USA_ConcordHearts, <b>updated</b>, 62, <a href="https://www.munzee.com/map/9yzg0jgfv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ConcordHearts.json" target="_blank">json</a> <b>100%</b><br />
-USA_WalkieTalkieWatch, <b>updated</b>, 87, <a href="https://www.munzee.com/map/9yzs8td5m/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WalkieTalkieWatch.json" target="_blank">json</a> <b>100%</b><br />
-USA_StPetersNVG, <b>updated</b>, 81, <a href="https://www.munzee.com/map/9yzs8v6bn/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StPetersNVG.json" target="_blank">json</a> <b>100%</b><br />
-USA_FoxHillFit, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yzsuf5pu/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FoxHillFit.json" target="_blank">json</a><br />
-USA_CelticKnot, <b>updated</b>, 322, <a href="https://www.munzee.com/map/9yzs2r3b7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticKnot.json" target="_blank">json</a><br />
-USA_STLPirateShip, <b>updated</b>, 190, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
-USA_BluesMunzee, <b>updated</b>, 695, <a href="https://www.munzee.com/map/9yzgd9yne/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BluesMunzee.json" target="_blank">json</a><br />
-USA_HowellViking, <b>updated</b>, 190, <a href="https://www.munzee.com/map/9yzs2dshg/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HowellViking.json" target="_blank">json</a><br />
-USA_STLPokeball, <b>updated</b>, 109, <a href="https://www.munzee.com/map/9yzg3ukw5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPokeball.json" target="_blank">json</a><br />
-USA_STLTardis, <b>updated</b>, 164, <a href="https://www.munzee.com/map/9yzg3wnjp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLTardis.json" target="_blank">json</a><br />
-USA_KirkwoodEvolutions1, <b>updated</b>, 173, <a href="https://www.munzee.com/map/9yzeqxeqn/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions1.json" target="_blank">json</a><br />
-USA_KirkwoodEvolutions2, <b>updated</b>, 141, <a href="https://www.munzee.com/map/9yzew8ewz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions2.json" target="_blank">json</a><br />
-USA_KirkwoodEvolutions3, <b>updated</b>, 71, <a href="https://www.munzee.com/map/9yzew83ct/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions3.json" target="_blank">json</a><br />
-USA_KirkwoodEvolutions4, <b>updated</b>, 333, <a href="https://www.munzee.com/map/9yzew3ppm/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions4.json" target="_blank">json</a><br />
-USA_KirkwoodEvolutions5, <b>updated</b>, 141, <a href="https://www.munzee.com/map/9yzewbe6d/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions5.json" target="_blank">json</a><br />
-USA_KirkwoodEvolutions6, <b>updated</b>, 145, <a href="https://www.munzee.com/map/9yzew8k2u/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions6.json" target="_blank">json</a> <b>100%</b><br />
-USA_KirkwoodEvolutions7, <b>updated</b>, 76, <a href="https://www.munzee.com/map/9yzew8n37/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions7.json" target="_blank">json</a><br />
-USA_Woodpecker, <b>updated</b>, 179, <a href="https://www.munzee.com/map/9yzep995f/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Woodpecker.json" target="_blank">json</a><br />
-USA_ZBriefcase, <b>updated</b>, 67, <a href="https://www.munzee.com/map/9yzs8jtyc/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZBriefcase.json" target="_blank">json</a> <b>100%</b><br />
-USA_WinterCardinalFeather, <b>updated</b>, 48, <a href="https://www.munzee.com/map/9yzsdcxnq/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WinterCardinalFeather.json" target="_blank">json</a> <b>100%</b><br />
-USA_Chickadee, <b>updated</b>, 198, <a href="https://www.munzee.com/map/9yzep8yfh/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Chickadee.json" target="_blank">json</a> <b>100%</b><br />
-USA_FlatDogBone, <b>updated</b>, 77, <a href="https://www.munzee.com/map/9yzser03w/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatDogBone.json" target="_blank">json</a> <b>100%</b><br />
-----csoportok<br />
-----városok<br />
-Lithuania_city_Vilnius, <b>updated</b>, <a href="https://www.munzee.com/map/u99zqup56/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_city_Vilnius.json" target="_blank">json</a><br />
-USA_city_Montgomery, <b>updated</b>, <a href="https://www.munzee.com/map/djf8m22fr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Montgomery.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.02.18 18:26:38<br />
-összesen 6596<br />
+USA_MontgomeryChiliPepper, not updated, 0.0<br />
+USA_ConcordHearts kihagyva (100%), <br />
+USA_WalkieTalkieWatch kihagyva (100%), <br />
+USA_StPetersNVG kihagyva (100%), <br />
+USA_FoxHillFit, not updated, 0.0<br />
+USA_CelticKnot, not updated, 0.0<br />
+USA_STLPirateShip, not updated, 0.0<br />
+USA_BluesMunzee, not updated, 0.0<br />
+USA_HowellViking, not updated, 0.0<br />
+USA_STLPokeball, not updated, 0.0<br />
+USA_STLTardis, not updated, 0.0<br />
+USA_KirkwoodEvolutions1, not updated, 0.0<br />
+USA_KirkwoodEvolutions2, not updated, 0.0<br />
+USA_KirkwoodEvolutions3, not updated, 0.0<br />
+USA_KirkwoodEvolutions4, not updated, 0.0<br />
+USA_KirkwoodEvolutions5, not updated, 0.0<br />
+USA_KirkwoodEvolutions6 kihagyva (100%), <br />
+USA_KirkwoodEvolutions7, not updated, 0.0<br />
+USA_Woodpecker, not updated, 0.0<br />
+USA_ZBriefcase kihagyva (100%), <br />
+USA_WinterCardinalFeather kihagyva (100%), <br />
+USA_Chickadee kihagyva (100%), <br />
+USA_FlatDogBone kihagyva (100%), <br />
+<b>stop</b> - 2023.02.19 01:43:33<br />
+összesen 2004<br />
